[package]
name = "wio-terminal"
version = "0.1.0"
authors = ["Jesse Braham <jesse@beta7.io>"]
description = "Board support crate for the Seeed Studio Wio Terminal"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "cortex-m",
    "arm",
    "embedded-hal",
    "no-std",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jessebraham/wio-terminal"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2"
nb = "~1.0"

[dependencies.cortex-m-rt]
version = "~0.6.12"
optional = true

[dependencies.atsamd-hal]
path = "../atsamd/hal"
version = "~0.8"
default-features = false

[dev-dependencies]
panic-halt = "~0.2"

[features]
default = ["atsamd-hal/samd51p19a", "rt", "unproven", "usb"]
rt = ["cortex-m-rt", "atsamd-hal/samd51p19a-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"

[[example]]
name = "blinky"
