[package]
name = "wio-terminal"
version = "0.1.0"
authors = ["Jesse Braham <jesse@beta7.io>"]
description = "Board support crate for the Seeed Studio Wio Terminal"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "arm",
    "cortex-m",
    "embedded-hal",
    "no-std",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jessebraham/wio-terminal"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "~0.6"
cortex-m-rt = { version = "~0.6", optional = true }
display-interface-spi = "0.4.0"
heapless = "~0.5"
ili9341 = "~0.4"

[dependencies.atsamd-hal]
git = "https://github.com/atsamd-rs/atsamd"
rev = "b075ee1f95bc0ffe78a374024b2471abac70b2cb"

[dependencies.lis3dh]
git = "https://github.com/BenBergman/lis3dh-rs"
rev = "0bd78d8aaf197dba9a4570c2934bf222ca20562c"

[dependencies.usb-device]
version = "~0.2"
optional = true

[dependencies.usbd-serial]
version = "~0.1"
optional = true

[dev-dependencies]
embedded-graphics = "~0.6"
panic-halt = "~0.2"

[features]
default = ["atsamd-hal/samd51p19a", "rt", "unproven", "usb"]
rt = ["cortex-m-rt", "atsamd-hal/samd51p19a-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
lto = true
opt-level = "s"

[[example]]
name = "usb_serial_display"
required-features = ["usb"]

[[example]]
name = "blinky"

[[example]]
name = "orientation"

[[example]]
name = "buttons"
